<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guild Members</string>
    <string name="notConnected">Active Internet connection required for latest information.</string>
    <string name="toonName">toonName</string>
    <string name="toonLevel">toonLevel</string>
    <string name="toonClass">toonClass</string>
    <string name="appDesc">Members of: </string>
    <string name="staticData">Using data stored locally</string>
    <string name="noLocal">No information stored on device</string>
    <string name="notReturned">No information returned from network</string>
    <string name="toonImg">Current toon image</string>
    <string name="levelLabel">Level: </string>
    <string name="classLabel">Class: </string>
    <string name="roleLabel">Role: </string>
    <string name="specLabel">Spec: </string>
    <string name="toonRole">toonRole</string>
    <string name="raceLabel">Race: </string>
    <string name="toonRace">toonRace</string>
    <string name="toonSpec">toonSpec</string>
    <string name="title_activity_toon_detail">Toon Detail</string>
    <string name="noImage">Image not found on server</string>
    <string name="none">None</string>
    <string name="getWebInfo">More Info</string>
    <string name="share">Share</string>
    <string name="action_search">Search Toons</string>
    <string name="action_favorite">Favorite Toons</string>
    <string name="action_prefs">Preferences</string>
    <string name="realmName">Realm Name</string>
    <string name="guildName">Guild Name</string>
    <string name="hyphen"> - </string>
    <string name="searchHint">Toon Name</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="favs">Favorites: </string>
    <string name="favToons">Favorite Toons</string>
    <string name="empty">No toons found</string>
    <string name="rate">0</string>
    <string name="light">Use Light Theme</string>
    <string name="save">Save</string>
    <string name="defaults">Set Defaults</string>
    <string name="noInput">Please enter both Realm and Guild</string>
    <string name="prefs">Preferences</string>
    <string name="noFave">No favorites</string>

</resources>
