<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/realmPref"
        android:hint="@string/realmName"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guildPref"
        android:hint="@string/guildName"
        android:layout_below="@id/realmPref"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guildPref"
        android:layout_centerHorizontal="true"
        android:hint="@string/light"
        android:id="@+id/themeSelect"
        android:layout_marginTop="20dp"/>

</RelativeLayout>