<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/rate"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/rating"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toonName"
        android:id="@+id/toonName"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/rating"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/toonLevel"
        android:id="@+id/toonLevel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/toonClass"
        android:layout_alignParentRight="true"
        android:id="@+id/toonClass"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/toonLevel"
        android:shadowColor="#000000"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="2.0"
        android:textStyle="bold" />


</RelativeLayout>